IDEA-216116 Update VM options to new JBR 11 ones in all shared run configurations (like IDEA.xml) and tests on TeamCity (TestingTasksImpl).
Updated TestingTasksImpl

GitOrigin-RevId: 91bc7039a3c38350f0f0b069c933d86ce8af515d